NM-2388 fix overflow issue.

--- a/app/assets/stylesheets/layout/_form.css.scss
+++ b/app/assets/stylesheets/layout/_form.css.scss
@@ -358,7 +358,6 @@ form:not(.no_inheritance) {
 
   .control-group {
     clear: both;
-    overflow: auto;
     margin-bottom: 10px;
 
 
